[package]
name = "get-livecaptions"
version = "0.1.0"
edition = "2021"
authors = ["corbamico@163.com"]
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lru = "0.12"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
similar = "2.2"
async-trait = "0.1"

[dependencies.windows]
version = "0.56"
features = [
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_System_DataExchange",
    "Win32_UI_WindowsAndMessaging",
    "UI_UIAutomation",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
]
